# lightweight_vo

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker.sh  docker_entrypoint.sh  stereo_depth_prior_example.cpp  test.cpp  test_config.cpp  test_logs.sh  test_vio_viewer.cpp
app/: euroc_stereo.cpp  euroc_stereo_vio.cpp  euroc_stereo_vo.cpp  information_matrix_comparison.cpp
app/player/: euroc_player.cpp  euroc_player.h
config/: euroc.yaml  euroc_vio.yaml  euroc_vo.yaml
docs/: Download_Dataset.md  Install.md  Performance_Analysis.md  Running_Example.md
script/: download_euroc.sh
src/config/: Config.h
src/database/: Feature.cpp  Feature.h  Frame.cpp  Frame.h  MapPoint.cpp  MapPoint.h
src/factor/: Factors.cpp  Factors.h  Parameters.cpp  Parameters.h  PnPFactors.cpp  PnPFactors.h  SE3Manifolds.cpp  SE3Manifolds.h
src/module/: Estimator.cpp  Estimator.h  FeatureTracker.cpp  FeatureTracker.h  Optimizer.cpp  Optimizer.h  PoseOptimizer.cpp  PoseOptimizer.h  PoseOptimizer_simple.cpp
src/optimization/: Factors.cpp  Factors.h  Parameters.cpp  Parameters.h
src/processing/: Estimator.cpp  Estimator.h  FeatureTracker.cpp  FeatureTracker.h  IMUHandler.cpp  IMUHandler.h  Optimizer.cpp  Optimizer.h
src/util/: Config.cpp  Config.h  EurocUtils.cpp  EurocUtils.h
src/viewer/: ImGuiViewer.cpp  ImGuiViewer.h  PangolinViewer.cpp  PangolinViewer.h
